changed display of contact text to prevent wide gaps

--- a/src/styles.css
+++ b/src/styles.css
@@ -190,7 +190,7 @@
 }
 
 .menu div:last-of-type {
-    padding-bottom: 30px;
+    padding-bottom: 6vh;
 }
 
 .menu p {
@@ -206,23 +206,26 @@
     min-height: 500px;
     height: calc(100vh - 10vh - 100px);
     width: 100%;
-    grid-template-rows: 4fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
     justify-content: center;
     background-color: rgba(20, 36, 37, 0.7);
     fill:rgb(244, 174, 25);
 }
 
-.contact div:first-child {
+.contact > div:first-child {
     padding-top: 30px;
     padding-bottom: 10px;
 }
 
-.contact div:not(:first-child) {
-    padding-bottom: 15px;
+.contact div:last-child {
+    font-size: 17px;
+    color:rgb(250, 206, 111);
+}
+
+.contact div:last-child div {
+    padding-bottom: 10px;
     display: flex;
     align-items: center;
     justify-content: start;
-    gap: 10px;
-    font-size: 17px;
-    color:rgb(250, 206, 111);
+    gap: 0.8rem;
 }
